fix for colorbars not showing on some macs

--- a/src/app/components/map/controls/coloring/coloring.component.scss
+++ b/src/app/components/map/controls/coloring/coloring.component.scss
@@ -1,31 +1,30 @@
 @import "styles.scss";
 
-div {
-  display: inline-block;
-  width:50%;
-  line-height: 10px;
+.color-option,
+.color-trigger {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
 }
-
+.color-label,
+.spectrum {
+  flex: 1;
+}
 
 .spectrum {
-  height: 12px; 
+  height: 12px;
   border: solid 1px $border;
-  width: 83px;
-  margin-left:4px;
-  margin-top:5px;
-}
-mat-select-trigger .spectrum {
-    height: 10px; 
 }
 
-::ng-deep .mat-select{
+::ng-deep .mat-select {
   border: solid 1px $border;
   padding: 5px 0px 5px 5px;
 }
 
-::ng-deep .mat-select-panel{
-    .mat-option {
-      height: 35px;
-    }
-    width:190px;  
+::ng-deep .mat-select-panel {
+  .mat-option {
+    height: 35px;
+  }
+  width: 190px;
 }
